// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Job Result should display Show Cuts link when current job is not Payfactors 1`] = `
<div
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  jobTitleClick={[Function EventEmitter]}
  showCutsLabel={[Function String]}
  showDataCuts="false"
  toggleDataCutsLabel={[Function String]}
>
  <td
    class="growing-cell"
  >
    <div
      class="job-title"
    >
      <span>
         Blend of Gas Operations Top Executive-Corporate, G 
        
        
        (13001)
      </span>
    </div>
    <div
      class="vendor"
    >
       Hewitt Associates 
      
      
      - TCM Executive Long Term Incentives Total Compensation by Industry
    </div>
    
    <span
      class="link"
    >
       Show Cuts 
    </span>
  </td><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  />
</div>
`;

exports[`Project - Add Data - Job Result should hide Show Cuts link, survey name, and job code, when the current job is Payfactors 1`] = `
<div
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  jobTitleClick={[Function EventEmitter]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <td
    class="growing-cell"
  >
    <div
      class="job-title"
    >
      <span>
         Accountant II 
        
      </span>
    </div>
    <div
      class="vendor"
    >
       Payfactors 
      
    </div>
    
  </td><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  /><td
    class="fixed-cell"
  />
</div>
`;
